# circular-bias-detection

./: .coverage  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  ACTION_PLAN_INDUSTRIAL.md  ALGORITHM_ENHANCEMENT_ROADMAP.md  ALGORITHM_ENHANCEMENT_SUMMARY.md  BACKEND_DEPLOYMENT_OPTIONS.md  CBD_PACKAGE_SUMMARY.md  CBD_PERFORMANCE_REPORT.md  CBD_PERFORMANCE_SUMMARY.md  CHANGELOG.md  CHANGELOG_V1.5.0.md  CITATION.cff  CODE_OF_CONDUCT.md  COLAB_USAGE_GUIDE.md  CONTRIBUTING.md  DATASET_README.md  DEEPSEEK_DEPLOYMENT_GUIDE.md  ENHANCEMENTS_V1.4.0.md  FAQ.md  FILES_CREATED_SUMMARY.txt  FINAL_COMPLETION_SUMMARY.md  FINAL_SESSION_REPORT.md  FIXED_INSTRUCTIONS.md  GET_STARTED.md  GITHUB_RELEASE_v1.1.0.md  GLOSSARY.md  GPU_ACCELERATION_SUMMARY.md  GPU_QUICK_START.md  IMPLEMENTATION_SUMMARY_V1.3.md  IMPLEMENTATION_SUMMARY_V1.5.0.md  LICENSE  MARKETING_LAUNCH_PLAN.md  OPTIMIZATION_SUMMARY.md  PHASE1_PLAN.md  (+73 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
api/: llm_pipeline.py
assets/: index-BUOrVc1V.css  index-C1cv_ocZ.js  index-C2mX4ECd.css  index-CBNO2sMs.js  index-CPTv3jGH.css  index-CcSuFVQH.js  index-DEpD_py7.js  index-H0mtUK5p.css  index-RvKD_ReK.js  index-Yitnrhkc.js  index.es-Bm8ujvCy.js  index.es-Db09Gvj0.js
backend/: .env.example  COMMERCIAL_MVP_IMPLEMENTATION.md  Dockerfile  INTEGRATION_SUMMARY.md  PROJECT_CHECKLIST.md  README.md  README_ZENODO.md  START_HERE.md  ZENODO_INTEGRATION_GUIDE.md  app.py  example_usage.py  main.py  render.yaml  requirements-vercel.txt  requirements.txt  run_day2_test.py  run_day3_test.py  run_psi_test.py  test_api_endpoints.py  test_integration.py  test_zenodo_integration.py  vercel.json  wsgi.py
cbd/: README.md  __init__.py  api.py  multiple_testing.py  multivariate_detection.py  prompt_analysis.py  risk_summary.py  thresholds.py
check-sleuth-ai/: .env.example  App.tsx  DEPLOYMENT_GUIDE.md  FILES_READY.md  GA_QUICK_REFERENCE.md  GOOGLE_ANALYTICS_SETUP.md  MANUAL_OPTIMIZATION_GUIDE.md  MANUAL_SETUP.md  PRE_DEPLOYMENT_CHECK.md  QUICK_START.md  README.md  RUN_MANUAL.bat  Run-Manual.ps1  START.bat  TYPESCRIPT_ERRORS_NOTE.md  index.html  metadata.json  package-lock.json  package.json  test_sample.csv  types.ts  vite.config.ts  开始使用.txt
circular_bias_cli/: __init__.py  main.py
circular_bias_detector/: __init__.py  advanced_metrics.py  api.py  bayesian.py  config.py  core.py  detection.py  exceptions.py  logging.py  metrics_utils.py  ml_detector.py  multimodal.py  simple_detector.py  utils.py  visualization.py
circular_bias_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: CHANGELOG.md  DATA_DICTIONARY.md  README.md  generate_benchmark_data.py  huggingface_data_collector.py
docs/: ADVANCED_FEATURES.md  ADVISOR_REQUIREMENTS_SPRINT.md  ALGORITHM_ENHANCEMENT.md  API_KEY_STRATEGY.md  BRANDING.md  BRAND_UNIFICATION_SUMMARY.md  CASE_STUDY_CONTAMINATION_CRISIS.md  CBDModel.md  CHANGELOG.md  CHANGELOG_ZENODO_17637303.md  COLAB_COMPLETE_GUIDE.md  COMMERCIAL_STRATEGY.md  COMPLETE_DOMAIN_SOLUTION.md  CONSISTENCY_IMPROVEMENTS_COMPLETE.md  DATA_COLLECTION_STRATEGY.md  DEPLOYMENT_GUIDE.md  ENHANCEMENTS_V1.1.md  ENHANCEMENTS_V1.3.md  GITHUB_SETTINGS_RECOMMENDATION.md  GOOGLE_SEO_GUIDE.md  GPU_ACCELERATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALL_GUIDE.md  INTEGRATION_AND_DEPLOYMENT_PLAN.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  LAUNCH_SUMMARY.md  LLM_EVALUATION_GUIDE.md  MEMO_SIMULATION_ENHANCEMENT.md  MVP_CONTENT_IMPLEMENTATION_GUIDE.md  MVP_IMPLEMENTATION_SUMMARY.md  NEW_FEATURES_README.md  NEW_FEATURES_V1.3.md  NEXT_STEPS_GUIDE.md  PATENT_ANALYSIS_SUMMARY.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_PLAN.md  PYTHONANYWHERE_DEPLOYMENT_GUIDE.md  QUICK_REFERENCE.md  QUICK_REFERENCE_CARD.md  (+16 more)
examples/: CBD_GPU_Colab.ipynb  README.md  Sleuth_JOSS_Quickstart.ipynb  advanced_detection_example.py  basic_usage_example.py  bootstrap_example.py  cbd_detector_gpu.py  demo_notebook.ipynb  generate_case_study_visualizations.py  generate_paper_figures.py  jupyter_extension_guide.md  llm_evaluation_example.py  performance_benchmark.py  permutation_visualization.ipynb  quickstart.py  quickstart_colab.ipynb  reproduce_case_studies.py  reproduce_simulations.py  retrain_null_example.py  semantic_rewrite_leakage.py  visualization_and_model_card.ipynb  visualization_example.py
experiments/: README.md  real_data_validation.py
mvp_case_study_figures/: contamination_data.csv
paper/: CONSISTENCY_FIX_SUMMARY.md  CORRECT_FIGURE_NAMING.md  Circular_Bias_Survey_NMI_FINAL.tex  Cover_Letter.tex  Declaration_of_Interests.txt  FIGURE_CAPTIONS.md  FIGURE_FIX_SUMMARY.md  FIGURE_UPLOAD_INSTRUCTIONS.md  FINAL_SUBMISSION_CHECKLIST.md  LATEX_INTEGRATION_VERIFICATION.md  NMI_SUBMISSION_CHECKLIST.md  QUICK_FIX_COPY_PASTE.md  QUICK_FIX_FIGURES.md  (+16 more)
(+253 files in other folders)
