[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circular-bias-detector"
version = "1.2.0"
description = "Sleuth - Detect circular bias in AI evaluations. Statistical framework with automated PSI, CCS, and correlation analysis."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hongping Zhang", email = "yujjam@uest.edu.gr"}
]
keywords = ["bias-detection", "algorithm-evaluation", "fairness", "machine-learning", "reproducibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"

# Core dependencies
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn>=0.24.0",
    "joblib>=1.0.0",
]

[project.optional-dependencies]
# CLI tools
cli = [
    "requests>=2.26.0",
    "click>=8.0.0",
]

# Visualization extras
viz = [
    "plotly>=5.0.0",
]

# LLM inference (advanced features)
inference = [
    "vllm>=0.3.0",
    "torch>=2.0.0",
]

# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

# Documentation
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

# All optional dependencies
all = [
    "requests>=2.26.0",
    "click>=8.0.0",
    "plotly>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/hongping-zh/circular-bias-detection"
Documentation = "https://github.com/hongping-zh/circular-bias-detection#readme"
Repository = "https://github.com/hongping-zh/circular-bias-detection"
"Bug Tracker" = "https://github.com/hongping-zh/circular-bias-detection/issues"
"Dataset" = "https://doi.org/10.5281/zenodo.17196639"
"Software DOI" = "https://doi.org/10.5281/zenodo.17201032"
"Web App" = "https://is.gd/check_sleuth"

[project.scripts]
circular-bias = "circular_bias_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["circular_bias_detector*", "circular_bias_cli*", "cbd*"]
exclude = ["tests*", "docs*"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=circular_bias_detector",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["circular_bias_detector"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

# mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "seaborn.*"
ignore_missing_imports = true
